<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="no_sd">not find sd card!</string>
	<string name="sd_plug_out">sd card plug out</string>
	
	<string name="success">success</string>
	<string name="fail">fail</string>
	
	<string name="ok">ok</string>
	<string name="cancel">cancel</string>
	
	<string name="file">file</string>
	<string name="folder">folder</string>
	
	<string name="type">type:</string>
	<string name="location">location:</string>
	<string name="size">size:</string>
	<string name="last_modified">last modified:</string>
	<string name="readable">readable:</string>
	<string name="writeable">writeable:</string>
	<string name="hidden">hidden:</string>
	
	<string name="file_operation">file operation</string>
	<string name="file_cut">cut</string>
	<string name="file_copy">copy</string>
	<string name="file_paste">paste</string>
	<string name="file_rename">rename</string>
	<string name="file_delete">delete</string>
	<string name="file_property">property</string>
	
	<string name="am_action">action</string>
	<string name="am_start">start</string>
	<string name="am_uninstall">uninstall</string>
	<string name="am_property">property</string>
	<string name="am_cancel">cancel</string>
	
	<string name="am_package_name">PackageName:</string>
	<string name="am_source_dir">SourceDir:</string>
	<string name="am_data_dir">DataDir:</string>
	<string name="am_user_id">UserID:</string>
	<string name="am_sdk_version">SdkVersion:</string>
</resources>
