<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="20dip" >
        <ImageView 
	        android:id="@+id/imageViewFileProperty" 
	        android:layout_width="50dip" 
	        android:layout_height="50dip"
			android:paddingTop="2dip" 
			android:paddingBottom="2dip">
        </ImageView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewFileName" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
	<ImageView 
		android:background="#ff909090" 
		android:layout_height="2.0dip" 
		android:layout_width="fill_parent" 
		android:layout_marginLeft="5.0dip" 
		android:layout_marginRight="5.0dip">
	</ImageView>
	<RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/type">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewType" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
	<ImageView 
		android:background="#ff909090" 
		android:layout_height="2.0dip" 
		android:layout_width="fill_parent" 
		android:layout_marginLeft="5.0dip" 
		android:layout_marginRight="5.0dip">
	</ImageView>
	<RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/location">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewLocation" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/size">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewSize" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
    <ImageView 
		android:background="#ff909090" 
		android:layout_height="2.0dip" 
		android:layout_width="fill_parent" 
		android:layout_marginLeft="5.0dip" 
		android:layout_marginRight="5.0dip">
	</ImageView>
	<RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/last_modified">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewLastModified" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
    <ImageView 
		android:background="#ff909090" 
		android:layout_height="2.0dip" 
		android:layout_width="fill_parent" 
		android:layout_marginLeft="5.0dip" 
		android:layout_marginRight="5.0dip">
	</ImageView>
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/readable">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewReadable" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/writeable">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewWriteable" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="5dip">
	    <TextView 
	        android:layout_width="100dip" 
	        android:layout_height="wrap_content" 
	        android:layout_centerVertical="true" 
	        android:text="@string/hidden">
        </TextView>
        <TextView 
	        android:text="TextView" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/textViewHidden" 
	        android:layout_marginLeft="120dip" 
	        android:layout_centerVertical="true">
        </TextView>
    </RelativeLayout>
</LinearLayout>
